# ica

./: .env  .gitattributes  .gitignore  .metadata  IdeaSpace-Chess-Academy.md  analysis_options.yaml  analysis_output.txt  calibration.md  chess_motivational_quotes.md  flutter_rust_bridge.yaml  gmbard.md  gmchanakya.md  idea.odt  idea1.odt  kingslayer.md  master_plan.md  pubspec.yaml  push_log.txt  push_out.txt  tutor.md
android/: gradle.properties
arasanengine-tester/: Cargo.toml
backend/: main.py
integration_test/: puzzle_test.dart  simple_test.dart
lib/: main.dart
rust_builder/: pubspec.yaml
rust_core/: Cargo.toml
rust_core/src/: frb_generated.rs
rust_core/src/api/: assignment.rs  chanakya.rs  cognitive.rs  commentary.rs  context.rs  history.rs  humanizer.rs  mod.rs  moves.rs  persona.rs  pgn_db.rs  puzzles.rs  state.rs  status.rs  tactics.rs  threats.rs
scratch/: test_fen.dart  test_fen_ch10.dart  test_fen_ch3.dart  test_fen_ch4_v2.dart
test/: academy_deadlock_test.dart  account_reset_dialog_test.dart  arena_timeout_undo_test.dart  assignment_provider_test.dart  battleground_decay_test.dart  battleground_draw_test.dart  battleground_lifecycle_test.dart  battleground_premove_test.dart  cloud_sync_test.dart  debug_tutorial_37_test.dart  historical_cinema_test.dart  performance_ledger_validation_and_cache_test.dart  position_context_builder_test.dart  print_paths_test.dart  scotoma_data_pipeline_test.dart  settings_test.dart  sound_service_test.dart  splash_screen_test.dart  store_provider_test.dart  study_lab_provider_test.dart  test_chess.dart  (+4 more)
(+421 files in other folders)
