[package]
name = "rust_lib_kingslayer_chess"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
shakmaty = "0.27"
rusqlite = { version = "0.31", features = ["bundled"] }
phf = { version = "0.11", features = ["macros"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
